# koala_engine

./: .gitignore  README.md  TODO.md
code/: .clang-format  .gitignore  CMakeLists.txt  README.md  address_sanitize.sh  asan.sh  asan_sup.txt  build-all.bat  build-all.sh  build-ninja.bat  build-ninja.sh  compile-shaders.bat  compile-shaders.sh  compile_commands.json  post-build.sh
code/engine/: CMakeLists.txt
code/engine/src/: defines.hpp  entry.hpp  game_types.hpp
code/engine/src/containers/: auto_array.hpp  darray.cpp  darray.hpp
code/engine/src/core/: absolute_clock.cpp  absolute_clock.hpp  application.cpp  application.hpp  asserts.hpp  event.cpp  event.hpp  input.cpp  input.hpp  logger.cpp  logger.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp
code/engine/src/math/: math.cpp  math.hpp  math_types.h  math_types.hpp
code/engine/src/memory/: linear_allocator.cpp  linear_allocator.hpp
code/engine/src/platform/: filesystem.cpp  filesystem.hpp  platform.hpp  platform_linux.cpp  platform_windows.cpp
code/engine/src/renderer/: renderer_backend.cpp  renderer_backend.hpp  renderer_frontend.cpp  renderer_frontend.hpp  renderer_types.hpp  renderer_types.inl
code/engine/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_fence.cpp  vulkan_framebuffer.cpp  vulkan_image.cpp  vulkan_pipeline.cpp  vulkan_platform.hpp  vulkan_renderpass.cpp  vulkan_shader_utils.cpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_types.hpp  vulkan_types.inl  vulkan_utils.cpp
code/engine/src/renderer/vulkan/shaders/: vulkan_object_shader.cpp  vulkan_object_shader.hpp
code/testbed/: CMakeLists.txt
code/testbed/src/: entry.cpp  game.cpp  game.hpp  main.cpp
code/tests/: CMakeLists.txt
code/tests/src/: expect.hpp  main.cpp  test_manager.cpp  test_manager.hpp
code/tests/src/memory/: linear_allocator_tests.cpp
